# PROYECTO-AED

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake.yml
autograder/: CMakeLists.txt  config.yml
autograder/tests/: redirect_io.h
autograder/tests/catch_test_1/: run_test  test.yml  test_1.cpp  test_1.in
autograder/tests/catch_test_2/: run_test  test.yml  test_2.cpp  test_2.in
autograder/tests/catch_test_3/: run_test  test.yml  test_3.cpp  test_3.in
autograder/tests/catch_test_4/: run_test  test.yml  test_4.cpp  test_4.in
autograder/tests/catch_test_5/: run_test  test.yml  test_5.cpp  test_5.in
autograder/tests/cppcheck/: cppcheck.cpp  run_test  suppressions.txt
include/: GridWidget.h  MainWindow.h  Node.h  Operations.h  SparseMatrix.h
src/: FormulaParser.cpp  GridWidget.cpp  MainWindow.cpp  Operations.cpp  P1.h  P2.h  P3.h  P4.h  P5.h  SparseMatrix.cpp  generate_zip.sh  main.cpp  main_console.cpp
tests/: test_matrix.cpp
