cmake_minimum_required(VERSION 3.16)
project(SpreadsheetDS CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(include)
add_library(core STATIC src/SparseMatrix.cpp src/Operations.cpp)
add_executable(spreadsheet src/main.cpp)
target_link_libraries(spreadsheet core)
add_executable(test_matrix tests/test_matrix.cpp)
target_link_libraries(test_matrix core)
